--- a/css/style.css
+++ b/css/style.css
@@ -8,7 +8,11 @@ body {
     min-width: 550px;
     margin: 40px auto;
 
-    background: url("../pics/background.jpg") no-repeat fixed;
+    background-image: url("../pics/background.jpg");
+    background-attachment: fixed;
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
 }
 
 header {
@@ -70,16 +74,23 @@ main {
 .content {
     width: 100%;
     padding: 15px;
+}
+
+.content p {
     text-align: justify;
+}
+
+.content h1, .content h2 {
+    text-align: start;
 }
 
 .content img {
     float: left;
-    border: 1px dashed purple;
-    padding: 10px;
+    padding: 5px;
     margin: 0 10px;
     height: 50%;
     width: 50%;
+    box-shadow: 10px 10px 50px 5px #ca99ff;
 }
 
 .content p {
